--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MJ Quizzes</title>
+    <title>M & J Quizzes</title>
     <link rel = "stylesheet" type="text/css" href="normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/CSS/style.css">
     
   </head>
   <body>
+    <!--temporary navbar (tbd)-->
     <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="index.html">Home</a>
@@ -22,7 +23,36 @@
         </li>
       </ul>
     <h1 style="text-align: center;">Welcome to M &  J Quizzes</h1>
-    <p>Welcome to our trivia quiz game. Put on your thinking caps and see if you are able to be the top scorer for our quiz.</p>
+
+    <!--Lottie animation of a person thinking-->
+    <div class="animation">
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <lottie-player src="https://lottie.host/7f833722-ec6c-470c-9ac2-175f8c71776f/212GZim9xt.json" background="transparent" speed="1" style="width: 400px; height: 400px;" loop autoplay></lottie-player>
+    </div>
+
+    <p>Welcome to our trivia quiz game. Put on your thinking caps and try out some quizzes!<br>Compete with others online to see 
+    how you fare alongside others!</p>
+    
+    <div class="container overflow-hidden text-center">
+        <div class="row gx-5">
+          <div class="col">
+           <div class="p-3">Leaderboard</div>
+          </div>
+          <div class="col">
+            <div class="p-3">Play</div>
+          </div>
+          <div class="col">
+            <div class="p-3">Settings</div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.10.1/lottie.min.js" integrity="sha512-H6aKTjvYAazW0iNuGj1f2dZvSWlt1HGZGEDsXRPETo2IB4H6v36Vl2qiZNlCRxOp0kT7iBf+7USNPavNscZGAw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </body>
 </html>
