--- a/index.html
+++ b/index.html
@@ -33,19 +33,16 @@
     <p>Welcome to our trivia quiz game. Put on your thinking caps and try out some quizzes!<br>Compete with others online to see 
     how you fare alongside others!</p>
     
-    <div class="container overflow-hidden text-center">
-        <div class="row gx-5">
-          <div class="col">
-           <div class="p-3">Leaderboard</div>
-          </div>
-          <div class="col">
-            <div class="p-3">Play</div>
-          </div>
-          <div class="col">
-            <div class="p-3">Settings</div>
-          </div>
-        </div>
-      </div>
+    <div class="menu">
+      <a href="leaderboard.html" class="link1">Leaderboard</a>
+      <a href="gameplay.html" class="link2">Play</a>
+      <a href="setting.html" class="link3">Settings</a>
+    </div>
+    <!--footer-->
+    <footer>
+      <p>Done by Mikhail and Jesiah</p>
+    </footer>
+   
 
 
 
