--- a/gamemenu.html
+++ b/gamemenu.html
@@ -28,7 +28,7 @@
     <div class="dropdown">
         <div class="select">
             <p style="font-size: 22px;">Category</p>
-            <span class="selected" id="selection"></span>
+            <span class="selected" id="option3"></span>
             <div class="caret"></div>
         </div>
         <ul class="list">
@@ -40,7 +40,7 @@
     <div class="dropdown">
         <div class="select">
             <p style="font-size: 22px;">Difficulty</p>
-            <span class="selected"></span>
+            <span class="selected" id="option1"></span>
             <div class="caret"></div>
         </div>
         <ul class="list">
@@ -52,7 +52,7 @@
     <div class="dropdown">
         <div class="select">
             <p style="font-size: 22px;">Ranked</p>
-            <span class="selected"></span>
+            <span class="selected" id="option2"></span>
             <div class="caret"></div>
         </div>
         <ul class="list">
