--- a/gamemenu.html
+++ b/gamemenu.html
@@ -7,7 +7,7 @@
     <title>M & J Quizzes - Gameplay</title>
     <link rel = "stylesheet" type="text/css" href="CSS/normalize.css">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
-    <script src="Javascript/dropdown.js" defer></script>
+    <!--<script src="Javascript/dropdown.js" defer></script>-->
 </head>
 <body>
     <h1 style="text-align: center;">M & J Quizzes</h1>
@@ -28,7 +28,7 @@
     <div class="dropdown">
         <div class="select">
             <p style="font-size: 22px;">Category</p>
-            <span class="selected" id="option3"></span>
+            <span class="selected" id="option1"></span>
             <div class="caret"></div>
         </div>
         <ul class="list">
@@ -40,7 +40,7 @@
     <div class="dropdown">
         <div class="select">
             <p style="font-size: 22px;">Difficulty</p>
-            <span class="selected" id="option1"></span>
+            <span class="selected" id="option2"></span>
             <div class="caret"></div>
         </div>
         <ul class="list">
@@ -52,7 +52,7 @@
     <div class="dropdown">
         <div class="select">
             <p style="font-size: 22px;">Ranked</p>
-            <span class="selected" id="option2"></span>
+            <span class="selected" id="option3"></span>
             <div class="caret"></div>
         </div>
         <ul class="list">
@@ -64,5 +64,9 @@
 </div>  
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="Javascript/quiz.js"></script>
+<script src="Javascript/dropdown.js"></script>
+
+
 </body>
 </html>
