--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
           <label for="psw"><b>Password</b></label>
           <input type="password" placeholder="Enter Password" name="psw" required id="password">
           <button type="submit" class="btn">Login</button>
-          <button type="button" class="btn cancel" ><a href=index.html>Back</a></button>
+          <button type="button" class="btn close" ><a href=index.html>Back</a></button>
         </form>
       </div>
 </body>
