--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,7 @@
           <input type="password" id = "password" placeholder="Enter Password" name="psw" required>
         <p>Already have an account? Sign in <a href="form.html">here</a>.</p>
           <button type="submit" class="btn">Login</button>
-          <button type="button" class="btn cancel">Close</button>
+          <button type="button" class="btn close"><a href = "index.html">Back</a></button>
         </form>
       </div>
 </body>
