changed form border-radius

--- a/form.html
+++ b/form.html
@@ -22,6 +22,14 @@
           <button type="submit" class="btn">Login</button>
           <button type="button" class="btn close" ><a href=index.html>Back</a></button>
         </form>
-      </div>
+        </div>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br>
+        <footer>
+          <p>Done by Mikhail and Jesiah</p>
+        </footer>
+      
 </body>
 </html>
