--- a/signup.html
+++ b/signup.html
@@ -11,6 +11,7 @@
 </head>
 <body>
       <div class="form-popup" id="myForm">
+        <!--Signup form-->
         <form class="form-container" onsubmit="return formValidation()" name="form">
           <h1>Welcome to M & J Quizzes</h1>
       
@@ -27,5 +28,9 @@
           <button type="button" class="btn close"><a href = "index.html">Back</a></button>
         </form>
       </div>
+      <!--footer-->
+      <footer>
+        <p>Done by Mikhail and Jesiah</p>
+      </footer>
 </body>
 </html>
