--- a/form.html
+++ b/form.html
@@ -14,13 +14,14 @@
         <form class="form-container" onsubmit="return formValidate()" name="form">
           <h1>Login</h1>
       
-          <label for="name"><b>Name</b></label>
-          <input type="name" id="name" placeholder="Enter Name" name="name" required>
-      
+          <!--<label for="name"><b>Name</b></label>
+          <input type="name" id="name" placeholder="Enter Name" name="name" required>-->
+          <label for="email"><b>Email</b></label>
+          <input type="email" id =" email" placeholder="Enter Email" name="email" required>
           <label for="psw"><b>Password</b></label>
           <input type="password" placeholder="Enter Password" name="psw" required id="password">
-          <button type="submit" class="btn">Login</button>
-          <button type="button" class="btn close" ><a href=index.html>Back</a></button>
+          <button type="submit" class="btn" id="login-submit">Login</button>
+          <button type="button" class="close" ><a href=index.html>Back</a></button>
         </form>
         </div>
         <br><br>
