--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     <!--Button for login and signup-->
     <div class="homebutton">
-      <button class="login" type="button"><a href="form.html">Login</a></button>
+      <button class="login"><a href="form.html">Login</a></button>
       
-      <button class="signup" type="button"><a href=signup.html>Sign-Up</a></button>
+      <button class="signup"><a href=signup.html>Sign-Up</a></button>
     </div>
   
     
