--- a/gameplay.html
+++ b/gameplay.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel = "stylesheet" type="text/css" href="CSS/normalize.css">
+    <link rel="stylesheet" type="text/css" href="CSS/game.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <title>Quiz</title>
 </head>
 <body>
-    
+<h1>M & J Quizzes</h1>
+<div class="quiz-container">
+    <div class="quiz">
+        <h2>What is the answer to this questions?</h2>
+        <div class="choice-container">
+            <p class="choice-prefix">A</p>
+            <p class="choice-text">Choice 1</p>
+        </div>
+        <div class="choice-container">
+            <p class="choice-prefix">B</p>
+            <p class="choice-text">Choice 2</p>
+        </div>
+        <div class="choice-container">
+            <p class="choice-prefix">C</p>
+            <p class="choice-text">Choice 3</p>
+        </div>
+        <div class="choice-container">
+            <p class="choice-prefix">D</p>
+            <p class="choice-text">Choice 4</p>
+        </div>
+
+    </div>
+
+</div>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<footer>
+    <p>Done by Mikhail and Jesiah</p>
+  </footer>   
 </body>
 </html>
