--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
         <p>Done by Mikhail and Jesiah</p>
       </footer>
       <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-      <script src="/Assignment2/Javascript/form.js"></script>
+      <script src="Javascript/form.js"></script>
  
 </body>
 </html>
