--- a/gameplay.html
+++ b/gameplay.html
@@ -13,22 +13,22 @@
 <h1>M & J Quizzes</h1>
 <div class="quiz-container">
     <div class="quiz">
-        <h2>What is the answer to this questions?</h2>
+        <h2 id="question">What is the answer to this questions?</h2>
         <div class="choice-container">
             <p class="choice-prefix">A</p>
-            <p class="choice-text">Choice 1</p>
+            <p class="choice-text" id="choice1">Choice 1</p>
         </div>
         <div class="choice-container">
             <p class="choice-prefix">B</p>
-            <p class="choice-text">Choice 2</p>
+            <p class="choice-text" id="choice2">Choice 2</p>
         </div>
         <div class="choice-container">
             <p class="choice-prefix">C</p>
-            <p class="choice-text">Choice 3</p>
+            <p class="choice-text" id="choice3">Choice 3</p>
         </div>
         <div class="choice-container">
             <p class="choice-prefix">D</p>
-            <p class="choice-text">Choice 4</p>
+            <p class="choice-text" id="choice4">Choice 4</p>
         </div>
 
     </div>
