--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" type="text/css" href="CSS/normalize.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/leaderboard.css">
+
 </head>
 <body>
-    
+    <h1>M & J Quizzes</h1>
+<div class="leaderboard">
+    <h2>Leaderboard</h2>
+
+</div> 
+<footer>
+    <p>Done bt Mikhail and Jesiah</p>
+</footer>   
 </body>
 </html>
