--- a/gameplay.html
+++ b/gameplay.html
@@ -37,21 +37,21 @@
         </div>
         <!--Questions and choices-->
         <h2 id="question">What is the answer to this questions?</h2>
-        <div class="choice-container">
+        <div class="choice-container" id="selection1"> 
             <p class="choice-prefix">A</p>
-            <p class="choice-text" id="choice1" data-number="1">Choice 1</p>
+            <p class="choice-text" id="choice1" data-number="1" onClick="reply_click(this.id)">Choice 1</p>
         </div>
-        <div class="choice-container">
+        <div class="choice-container" id="selection2">
             <p class="choice-prefix">B</p>
-            <p class="choice-text" id="choice2" data-number="2">Choice 2</p>
+            <p class="choice-text" id="choice2" data-number="2"onClick="reply_click(this.id)">Choice 2</p>
         </div>
-        <div class="choice-container">
+        <div class="choice-container" id="selection3">
             <p class="choice-prefix">C</p>
-            <p class="choice-text" id="choice3" data-number="3">Choice 3</p>
+            <p class="choice-text" id="choice3" data-number="3" onClick="reply_click(this.id)">Choice 3</p>
         </div>
-        <div class="choice-container">
+        <div class="choice-container" id="selection4">
             <p class="choice-prefix">D</p>
-            <p class="choice-text" id="choice4" data-number="4">Choice 4</p>
+            <p class="choice-text" id="choice4" data-number="4" onClick="reply_click(this.id)">Choice 4</p>
         </div>
 
     </div>
