--- a/gameplay.html
+++ b/gameplay.html
@@ -58,7 +58,9 @@
 
 </div>
 
-
+<div class="round-time-bar" data-style="smooth" style="--duration: 20;">
+    <div></div>
+  </div>
 <br><br>
 <br><br>
 <br><br>
