--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel = "stylesheet" type="text/css" href="CSS/normalize.css">
     <link rel="stylesheet" type="text/css" href="CSS/home.css">
+
 </head>
 <body>
     <div class="context">
         <h1>M & J Quizzes</h1>
-        <button class="login"><a href="form.html">Login</a></button>
-        
-        <button class="signup"><a href=signup.html>Sign-Up</a></button>
-      </div>
+    </div>
+    <div class="buttons">
+        <a href="form.html">Login</a>
+        <a href="signup.html">Signup</a>
+    </div>
 
 
 <div class="area" >
