--- a/signup.html
+++ b/signup.html
@@ -18,8 +18,8 @@
           <label for="email"><b>Email</b></label>
           <input type="email" id =" email" placeholder="Enter Email" name="email" required>
   
-          <!--<label for="name"><b>Name</b></label>
-          <input type="name" id="email" placeholder="Enter Name" name="name" required>-->
+          <label for="name"><b>Name</b></label>
+          <input type="name" id="email" placeholder="Enter Name" name="name" required>
       
           <label for="psw"><b>Password</b></label>
           <input type="password" id = "password" placeholder="Enter Password" name="psw" required>
