Added audio in the audio folder and some pages

--- a/form.html
+++ b/form.html
@@ -12,6 +12,10 @@
    
 </head>
 <body>
+
+      <!--Background music-->
+      <audio autoplay = "" loop = "" src="/Assignment2/Audio/Quiz-show-background-music-loop.mp3"></audio>
+
       <div class="form-popup" id="myForm">
         <form class="form-container" name="form" onsubmit="return formValidate()">
           <h1>Login</h1>
