--- a/signup.html
+++ b/signup.html
@@ -10,6 +10,9 @@
     
 </head>
 <body>
+      <!--Background music-->
+      <audio autoplay = "" loop = "" src="/Assignment2/Audio/Quiz-show-background-music-loop.mp3"></audio>
+      
       <div class="form-popup" id="myForm">
         <!--Signup form-->
         <form class="form-container" onsubmit="return formValidation()" name="form" id="signup-form">
