--- a/home.html
+++ b/home.html
@@ -10,7 +10,8 @@
     <script src="Javascript/form.js" defer></script>
   </head>
   <body>
-
+      <!--Background music-->
+      <audio autoplay = "" loop = "" src="/Assignment2/Audio/Quiz-show-background-music-loop.mp3"></audio>
   
     
 
