--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
 </head>
 <body>
+    <!--Background music-->
+    <audio autoplay loop>
+        <source src="/Assignment2/Audio/Quiz-show-background-music-loop.mp3" type="audio/mpeg">
+      </audio>
+   
+    
+    
     <div class="context">
         <h1>M & J Quizzes</h1>
     </div>
