added leaderboard and changed background music

--- a/form.html
+++ b/form.html
@@ -14,7 +14,9 @@
 <body>
 
       <!--Background music-->
-      <audio autoplay = "" loop = "" src="/Assignment2/Audio/Quiz-show-background-music-loop.mp3"></audio>
+      <audio autoplay loop>
+        <source src="/Assignment2/Audio/Marimba-music.mp3" type="audio/mpeg">
+      </audio>
 
       <div class="form-popup" id="myForm">
         <form class="form-container" name="form" onsubmit="return formValidate()">
