--- a/gamemenu.html
+++ b/gamemenu.html
@@ -10,9 +10,15 @@
     <!--<script src="Javascript/dropdown.js" defer></script>-->
 </head>
 <body>
+    <!--Background audio-->
+    <audio autoplay loop>
+        <source src="/Assignment2/Audio/Marimba-music.mp3" type="audio/mpeg">
+      </audio>
+
+
     <h1 style="text-align: center;">M & J Quizzes</h1>
     <div class="button1">
-        <a href="index.html">Back</a>
+        <a href="home.html">Back</a>
     </div>
    
     
