--- a/home.html
+++ b/home.html
@@ -11,8 +11,9 @@
   </head>
   <body>
       <!--Background music-->
-      <audio autoplay = "" loop = "" src="/Assignment2/Audio/Quiz-show-background-music-loop.mp3"></audio>
-  
+      <audio autoplay loop>
+        <source src="/Assignment2/Audio/Marimba-music.mp3" type="audio/mpeg">
+      </audio>
     
 
 
