timer and correct/incorrect sounds

--- a/gameplay.html
+++ b/gameplay.html
@@ -58,7 +58,7 @@
 
 </div>
 
-<div class="round-time-bar" data-style="smooth" style="--duration: 20;">
+<div class="round-time-bar" id="round-time-bar" data-style="smooth" style="--duration: 10;">
     <div></div>
   </div>
 <br><br>
