--- a/signup.html
+++ b/signup.html
@@ -19,10 +19,10 @@
           <h1>Welcome to M & J Quizzes</h1>
       
           <label for="email"><b>Email</b></label>
-          <input type="email" id =" email" placeholder="Enter Email" name="email" required>
+          <input type="email" id ="email" placeholder="Enter Email" name="email" required>
   
           <label for="name"><b>Name</b></label>
-          <input type="name" id="email" placeholder="Enter Name" name="name" required>
+          <input type="text" id ="name" placeholder = "Enter Name" name="name" required>
       
           <label for="psw"><b>Password</b></label>
           <input type="password" id = "password" placeholder="Enter Password" name="psw" required>
