--- a/form.html
+++ b/form.html
@@ -22,9 +22,9 @@
         <form class="form-container" name="form" onsubmit="return formValidate()">
           <h1>Login</h1>
           <label for="name"><b>Name</b></label>
-          <input type="name" id="name" placeholder="Enter Name" name="name" required>
-          <label for="email"><b>Email</b></label>
-    
+          <input type="text" id="name" placeholder="Enter Name" name="name" required>
+
+          <label for = "psw"><b>Password</b></label>
           <input type="password" placeholder="Enter Password" name="psw" required id="password">
 
           <button type="submit" class="btn" id="login-submit">Login</button>
