--- a/gamemenu.html
+++ b/gamemenu.html
@@ -38,9 +38,9 @@
             <div class="caret"></div>
         </div>
         <ul class="list">
-            <li id="sel">General Knowledge</li>
-            <li id="sel">Sports</li>
-            <li id ="sel">Politics</li>
+            <li>General Knowledge</li>
+            <li>Sports</li>
+            <li>Politics</li>
         </ul>
     </div>
     <div class="dropdown">
@@ -50,9 +50,9 @@
             <div class="caret"></div>
         </div>
         <ul class="list">
-            <li id ="sel">Easy</li>
-            <li id="sel">Medium</li>
-            <li id="sel">Hard</li>
+            <li>Easy</li>
+            <li>Medium</li>
+            <li>Hard</li>
         </ul>
     </div>
     <div class="dropdown">
@@ -62,8 +62,8 @@
             <div class="caret"></div>
         </div>
         <ul class="list">
-            <li id="sel">Yes</li>
-            <li id="sel">No</li>
+            <li>Yes</li>
+            <li>No</li>
             
         </ul>
     
