--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
           <label for="psw"><b>Password</b></label>
           <input type="password" id = "password" placeholder="Enter Password" name="psw" required>
         <p>Already have an account? Sign in <a href="form.html">here</a>.</p>
-          <button type="submit" class="btn" id="register">Login</button>
+          <button type="submit" class="btn" id="register">Sign Up</button>
           <button type="button" class="close"><a href = "index.html">Back</a></button>
         </form>
       </div>
