--- a/leaderboard.html
+++ b/leaderboard.html
@@ -17,7 +17,7 @@
       </audio>
 
     <div class="button1">
-        <a href="home.html">Back to home</a>
+        <a href="home.html" class="back-button">Back to home</a>
     </div>
 <!--Leaderboard table-->
 <div class="dropdown-options">
@@ -28,9 +28,9 @@
           <div class="caret"></div>
       </div>
       <ul class="list">
-          <li id="sel1">General Knowledge</li>
-          <li id="sel2">Sports</li>
-          <li id ="sel3">Politics</li>
+          <li>General Knowledge</li>
+          <li>Sports</li>
+          <li>Politics</li>
       </ul>
   </div>
   <div class="dropdown">
@@ -40,9 +40,9 @@
           <div class="caret"></div>
       </div>
       <ul class="list">
-          <li id ="sel4">Easy</li>
-          <li id ="sel5">Medium</li>
-          <li id ="sel6">Hard</li>
+          <li>Easy</li>
+          <li>Medium</li>
+          <li>Hard</li>
       </ul>
   </div>
 </div>
