--- a/gamemenu.html
+++ b/gamemenu.html
@@ -13,7 +13,7 @@
 <body>
     <!--Background audio-->
     <audio autoplay loop>
-        <source src="/Assignment2/Audio/Marimba-music.mp3" type="audio/mpeg">
+        <source src="Audio/Marimba-music.mp3" type="audio/mpeg">
       </audio>
 
 
