--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
   <body>
       <!--Background music-->
       <audio autoplay loop>
-        <source src="/Assignment2/Audio/Marimba-music.mp3" type="audio/mpeg">
+        <source src="Audio/Marimba-music.mp3" type="audio/mpeg">
       </audio>
     
 
