--- a/leaderboard.html
+++ b/leaderboard.html
@@ -8,12 +8,12 @@
     <link rel = "stylesheet" type="text/css" href="CSS/normalize.css">
     <link rel="stylesheet" type="text/css" href="CSS/leaderboard.css">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
-    <script src="/Assignment2/Javascript/dropdown.js" defer></script>
+
 </head>
 <body>
       <!--Background audio-->
       <audio autoplay loop>
-        <source src="/Assignment2/Audio/Marimba-music.mp3" type="audio/mpeg">
+        <source src="Audio/Marimba-music.mp3" type="audio/mpeg">
       </audio>
 
     <div class="button1">
@@ -83,7 +83,7 @@
                 <td id = "position4"></td>
                 <td id = "name4"></td>
                 <td id = "score4"></td>
-                <td id = "lives5"></td>
+                <td id = "lives4"></td>
             
               </tr>
               <tr>
@@ -103,6 +103,9 @@
 <footer>
     <p>Done by Mikhail and Jesiah</p>
 </footer>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="Javascript/quiz.js" ></script>
+<script src="Javascript/dropdown.js" ></script>
 
   </body>   
 </body>
