--- a/form.html
+++ b/form.html
@@ -7,15 +7,14 @@
     <title>Login</title>
     <link rel = "stylesheet" type="text/css" href="CSS/normalize.css">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
-    <script src="/Assignment2/Javascript/form.js"defer></script>
-    <script src="/Assignment2/Javascript/quiz.js"defer></script>
+
    
 </head>
 <body>
 
       <!--Background music-->
       <audio autoplay loop>
-        <source src="/Assignment2/Audio/Marimba-music.mp3" type="audio/mpeg">
+        <source src="Audio/Marimba-music.mp3" type="audio/mpeg">
       </audio>
 
       <div class="form-popup" id="myForm">
@@ -40,6 +39,10 @@
           <p>Done by Mikhail and Jesiah</p>
         </footer>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        
+
+        <script src="Javascript/form.js"></script>
+        <script src="Javascript/quiz.js"></script>
       
 </body>
 </html>
