--- a/gamemenu.html
+++ b/gamemenu.html
@@ -26,7 +26,9 @@
 
 <!--Introductory text-->
 <div class="text">
-<p>Choose your category, difficulty and<br>ranked(whether you want your score to be on the leaderboard or not). Have fun :D</p>
+<p>Choose your category, difficulty and ranked(whether you want your score to be on the leaderboard or not).<br> For easy difficulty
+    you will be awarded 5 points for each correct answer. For medium, you will be awarded 10 points and lastly on hard difficulty,<br>
+    You will be awarded 20 points. Have fun learning :D.</p>
 </div>
 <!--Dropdown options for the quiz-->
 <div class="dropdown-options">
