--- a/home.html
+++ b/home.html
@@ -23,10 +23,11 @@
     <!--Lottie animation of a person thinking-->
     <div class="animation">
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-        <lottie-player src="https://lottie.host/7f833722-ec6c-470c-9ac2-175f8c71776f/212GZim9xt.json" background="transparent" speed="1" style="width: 400px; height: 400px;" loop autoplay></lottie-player>
+        <lottie-player src="https://lottie.host/7f833722-ec6c-470c-9ac2-175f8c71776f/212GZim9xt.json" background="transparent" speed="1" style="width: 500px; height: 500px;" loop autoplay></lottie-player>
     </div>
 
-    <p>Welcome to our trivia quiz game. Put on your thinking caps and try out some quizzes!<br>Compete with others online to see 
+    <p>Welcome to our trivia quiz game.<br> There will be 3 categories to choose from: General Knowledge, Sports and Politics.<br>
+      Put on your thinking caps and try out some quizzes!<br>Compete with others online to see 
     how you fare alongside others!</p>
     
     <!--Navbar for our quiz will be in the center-->
