--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,9 @@
 </head>
 <body>
       <!--Background music-->
-      <audio autoplay = "" loop = "" src="/Assignment2/Audio/Quiz-show-background-music-loop.mp3"></audio>
+      <audio autoplay loop>
+        <source src="Audio/Marimba-music.mp3" type="audio/mpeg">
+      </audio>
       
       <div class="form-popup" id="myForm">
         <!--Signup form-->
