--- a/gameplay.html
+++ b/gameplay.html
@@ -73,6 +73,7 @@
 
                 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
                 <script src="Javascript/quiz.js"></script>
+                <script src="Javascript/form.js"></script>
                 <script src="Javascript/game.js"></script>
 
 
