--- a/gameplay.html
+++ b/gameplay.html
@@ -62,7 +62,17 @@
             <div class="round-time-bar" id="round-time-bar" data-style="smooth" style="--duration: 10;">
                 <div></div>
             </div>
-            <br><br>
+            <div class="row">
+                <div id="images">
+                    <img src ="Images/heart.png" alt="Heart" id="heart1" class="current-heart">
+                </div>
+                <div id="images">
+                    <img src ="Images/heart.png" alt="Heart" id="heart2">
+                </div>
+                <div id="images">
+                    <img src ="Images/heart.png" alt="Heart" id="heart3">
+                </div>
+            </div>
             <br><br>
             <br><br>
             <br><br>
