--- a/gameplay.html
+++ b/gameplay.html
@@ -10,83 +10,85 @@
     <title>Quiz</title>
 </head>
 <body>
-    <div id="load">
-        <div id="click-absorb">
-            <div class="container">
-            </div>
-            <h1>M & J Quizzes</h1>
-            <div class="quiz-container">
-                <div class="quiz">
-                    <div id="hud">
-                        <!--Heads-up display-->
-                        <div id="hud-item">
-                            <p class="hud-prefix">
-                                Questions
-                            </p>
-                            <h1 class="hud-main-text" id="questionCounter">
-                                1/10
-                            </h1>
+    <div id="score-area">
+        <div id="load">
+            <div id="click-absorb">
+                <div class="container">
+                </div>
+                <h1>M & J Quizzes</h1>
+                <div class="quiz-container">
+                    <div class="quiz">
+                        <div id="hud">
+                            <!--Heads-up display-->
+                            <div id="hud-item">
+                                <p class="hud-prefix">
+                                    Questions
+                                </p>
+                                <h1 class="hud-main-text" id="questionCounter">
+                                    1/10
+                                </h1>
+                            </div>
+                            <div id="hud-item">
+                                <p class="hud-prefix">
+                                    Score
+                                </p>
+                                <h1 class="hud-main-text" id="score">
+                                    0
+                                </h1>
+                            </div>
                         </div>
-                        <div id="hud-item">
-                            <p class="hud-prefix">
-                                Score
-                            </p>
-                            <h1 class="hud-main-text" id="score">
-                                0
-                            </h1>
+                        <!--Questions and choices-->
+                        <h2 id="question">What is the answer to this questions?</h2>
+                        <div class="choice-container" id="selection1"> 
+                            <p class="choice-prefix">A</p>
+                            <p class="choice-text" id="choice1" data-number="1" onClick="reply_click(this.id)">Choice 1</p>
                         </div>
-                    </div>
-                    <!--Questions and choices-->
-                    <h2 id="question">What is the answer to this questions?</h2>
-                    <div class="choice-container" id="selection1"> 
-                        <p class="choice-prefix">A</p>
-                        <p class="choice-text" id="choice1" data-number="1" onClick="reply_click(this.id)">Choice 1</p>
-                    </div>
-                    <div class="choice-container" id="selection2">
-                        <p class="choice-prefix">B</p>
-                        <p class="choice-text" id="choice2" data-number="2" onClick="reply_click(this.id)">Choice 2</p>
-                    </div>
-                    <div class="choice-container" id="selection3">
-                        <p class="choice-prefix">C</p>
-                        <p class="choice-text" id="choice3" data-number="3" onClick="reply_click(this.id)">Choice 3</p>
-                    </div>
-                    <div class="choice-container" id="selection4">
-                        <p class="choice-prefix">D</p>
-                        <p class="choice-text" id="choice4" data-number="4" onClick="reply_click(this.id)">Choice 4</p>
+                        <div class="choice-container" id="selection2">
+                            <p class="choice-prefix">B</p>
+                            <p class="choice-text" id="choice2" data-number="2" onClick="reply_click(this.id)">Choice 2</p>
+                        </div>
+                        <div class="choice-container" id="selection3">
+                            <p class="choice-prefix">C</p>
+                            <p class="choice-text" id="choice3" data-number="3" onClick="reply_click(this.id)">Choice 3</p>
+                        </div>
+                        <div class="choice-container" id="selection4">
+                            <p class="choice-prefix">D</p>
+                            <p class="choice-text" id="choice4" data-number="4" onClick="reply_click(this.id)">Choice 4</p>
+                        </div>
+
                     </div>
 
                 </div>
+
+                <div class="round-time-bar" id="round-time-bar" data-style="smooth" style="--duration: 10;">
+                    <div></div>
+                </div>
+                <div class="row">
+                    <div id="images">
+                        <img src ="Images/heart.png" alt="Heart" id="heart1" class="current-heart">
+                    </div>
+                    <div id="images">
+                        <img src ="Images/heart.png" alt="Heart" id="heart2">
+                    </div>
+                    <div id="images">
+                        <img src ="Images/heart.png" alt="Heart" id="heart3">
+                    </div>
+                </div>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <footer>
+                    <p>Done by Mikhail and Jesiah</p>
+                </footer>   
+
+                    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+                    <script src="Javascript/quiz.js"></script>
+                    <script src="Javascript/form.js"></script>
+                    <script src="Javascript/game.js"></script>
+
 
             </div>
-
-            <div class="round-time-bar" id="round-time-bar" data-style="smooth" style="--duration: 10;">
-                <div></div>
-            </div>
-            <div class="row">
-                <div id="images">
-                    <img src ="Images/heart.png" alt="Heart" id="heart1" class="current-heart">
-                </div>
-                <div id="images">
-                    <img src ="Images/heart.png" alt="Heart" id="heart2">
-                </div>
-                <div id="images">
-                    <img src ="Images/heart.png" alt="Heart" id="heart3">
-                </div>
-            </div>
-            <br><br>
-            <br><br>
-            <br><br>
-            <br><br>
-            <footer>
-                <p>Done by Mikhail and Jesiah</p>
-            </footer>   
-
-                <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-                <script src="Javascript/quiz.js"></script>
-                <script src="Javascript/form.js"></script>
-                <script src="Javascript/game.js"></script>
-
-
         </div>
     </div>
 </body>
