--- a/gamemenu.html
+++ b/gamemenu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M & J Quizzes - Gameplay</title>
+    <title>M & J Quizzes - GameMenu</title>
     <link rel = "stylesheet" type="text/css" href="CSS/normalize.css">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <link rel="stylesheet" type="text/css" href="CSS/game.css">
@@ -38,6 +38,7 @@
             <span class="selected" id="option1"></span>
             <div class="caret"></div>
         </div>
+        <!--Selection list for category-->
         <ul class="list">
             <li>General Knowledge</li>
             <li>Sports</li>
@@ -50,6 +51,7 @@
             <span class="selected" id="option2"></span>
             <div class="caret"></div>
         </div>
+        <!--Selection list for difficulty-->
         <ul class="list">
             <li>Easy</li>
             <li>Medium</li>
@@ -62,6 +64,7 @@
             <span class="selected" id="option3"></span>
             <div class="caret"></div>
         </div>
+        <!--Selection list for ranked-->
         <ul class="list">
             <li>Yes</li>
             <li>No</li>
@@ -76,7 +79,8 @@
 
 <div class="start-button"> 
     <a href="gameplay.html" class="button2">Start</a>
-    </div>  
+    </div> 
+<!--Footer--> 
 <footer>
     <p>Done by Mikhail and Jesiah</p>
 </footer>
