--- a/home.html
+++ b/home.html
@@ -25,15 +25,16 @@
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
         <lottie-player src="https://lottie.host/7f833722-ec6c-470c-9ac2-175f8c71776f/212GZim9xt.json" background="transparent" speed="1" style="width: 500px; height: 500px;" loop autoplay></lottie-player>
     </div>
-
+    <!--Introductory text-->
     <p>Welcome to our trivia quiz game.<br> There will be 3 categories to choose from: General Knowledge, Sports and Politics.<br>
       Put on your thinking caps and try out some quizzes!<br>Compete with others online to see 
     how you fare alongside others!</p>
     
-    <!--Navbar for our quiz will be in the center-->
+    <!--Navbar with leaderboard and game menu button for our quiz will be in the center-->
     <div class="menu">
       <a href="leaderboard.html" class="link1">Leaderboard</a>
       <a href="gamemenu.html" class="link2">Play</a>
+      <a href="index.html" class="link3">Exit</a>
     </div>
     <!--footer-->
     <footer>
