--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </audio>
    
     
-    
+<!--Main content-->
     <div class="context">
         <h1>M & J Quizzes</h1>
     </div>
@@ -25,7 +25,7 @@
         <a href="signup.html">Signup</a>
     </div>
 
-
+<!--Object animation-->
 <div class="area" >
             <ul class="circles">
                     <li></li>
