--- a/leaderboard.html
+++ b/leaderboard.html
@@ -27,6 +27,7 @@
           <span class="selected" id="option1"></span>
           <div class="caret"></div>
       </div>
+      <!--Selection list for category-->
       <ul class="list">
           <li>General Knowledge</li>
           <li>Sports</li>
@@ -39,6 +40,7 @@
           <span class="selected" id="option2"></span>
           <div class="caret"></div>
       </div>
+      <!--Selection list for difficulty-->
       <ul class="list">
           <li>Easy</li>
           <li>Medium</li>
@@ -50,6 +52,7 @@
 <!--Leaderboard table-->
 <table class="table">
       <thead>
+        <!--Headers for each column-->
       <tr>
           <th>Rank</th>
           <th>Category</th>
@@ -59,6 +62,7 @@
       </tr>
     </thead>
     <tbody>
+        <!--Table content for each header-->
       <tr>
           <td data-label="Rank" id="rank1"></td>
           <td data-label="Category" id="cat1"></td>
@@ -104,14 +108,13 @@
 
 
 
- 
+<!--footer--> 
 <footer>
     <p>Done by Mikhail and Jesiah</p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="Javascript/quiz.js" ></script>
 <script src="Javascript/dropdown.js" ></script>
-
-  </body>   
+  
 </body>
 </html>
