--- a/gameplay.html
+++ b/gameplay.html
@@ -7,7 +7,7 @@
     <link rel = "stylesheet" type="text/css" href="CSS/normalize.css">
     <link rel="stylesheet" type="text/css" href="CSS/game.css">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
-    <title>Quiz</title>
+    <title>M & J Quizzes - Quiz</title>
 </head>
 <body>
     <div id="score-area">
@@ -82,18 +82,18 @@
                 <br><br>
                 <br><br>
                 <br><br>
-                <!--footer-->
             </div>
         </div>
     </div>
-                <footer>
-                    <p>Done by Mikhail and Jesiah</p>
-                </footer>   
+     <!--footer-->
+    <footer>
+        <p>Done by Mikhail and Jesiah</p>
+    </footer>   
 
-                    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-                    <script src="Javascript/quiz.js"></script>
-                    <script src="Javascript/form.js"></script>
-                    <script src="Javascript/game.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="Javascript/quiz.js"></script>
+    <script src="Javascript/form.js"></script>
+    <script src="Javascript/game.js"></script>
 
 
       
