--- a/signup.html
+++ b/signup.html
@@ -31,7 +31,7 @@
         <!--Ask the user if they had an existing account-->
         <p>Already have an account? Sign in <a href="form.html">here</a>.</p>
 
-          <button type="submit" class="btn" id="register">Sign Up</button>
+          <button type="submit" class="btn" id="register">Sign In</button>
 
           <button type="button" class="close" onclick="Redirect()">Back</button>
         </form>
