--- a/leaderboard.html
+++ b/leaderboard.html
@@ -19,6 +19,7 @@
     <div class="button1">
         <a href="home.html" class="back-button">Back to home</a>
     </div>
+<p>Select the category and difficulty that you had played to see your scores.</p>
 <!--Dropdown list-->
 <div class="dropdown-options">
   <div class="dropdown">
