--- a/gamemenu.html
+++ b/gamemenu.html
@@ -30,6 +30,8 @@
     <b>No</b>: You do not want your score to be displayed on the leaderboard).<br> For easy difficulty
     you will be awarded 5 points for each correct answer. For medium, you will be awarded 10 points and lastly on hard difficulty,<br>
     You will be awarded 20 points. Have fun learning :D.</p>
+
+<p>Oh and please do not cheat in any way:(</p>
 </div>
 <!--Dropdown options for the quiz-->
 <div class="dropdown-options">
