minor fix for flex

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -19,7 +19,9 @@
     <div class="button1">
         <a href="home.html" class="back-button">Back to home</a>
     </div>
+<div class="text">
 <p>Select the category and difficulty that you had played to see your scores.</p>
+</div>
 <!--Dropdown list-->
 <div class="dropdown-options">
   <div class="dropdown">
